feat: Add export/import functionality for users management
- Create /api/admin/users/export endpoint (JSON/CSV)
- Create /api/admin/users/import endpoint with skip/update modes
- Add export/import buttons and modal in users page
- Add translations for export/import functionality
- Support CSV and JSON file formats

--- a/lib/i18n/translations/en.json
+++ b/lib/i18n/translations/en.json
@@ -42,6 +42,22 @@
     "role": "Role",
     "canCreateGroups": "Can Create Groups",
     "noName": "No name",
+    "export": "Export",
+    "import": "Import",
+    "exportJSON": "Export JSON",
+    "exportCSV": "Export CSV",
+    "importTitle": "Import Users",
+    "importDescription": "Import users from a JSON or CSV file. The file should match the export format.",
+    "importMode": "Import Mode",
+    "importModeSkip": "Skip Existing (Recommended)",
+    "importModeUpdate": "Update Existing",
+    "importModeHelp": "Skip: Don't import if user already exists. Update: Update existing users.",
+    "importSuccess": "Import Successful",
+    "importFailed": "Import Failed",
+    "updated": "Updated",
+    "skipped": "Skipped",
+    "errors": "Errors",
+    "unknownError": "Unknown error occurred",
     "roleOptions": {
       "all": "All",
       "customer": "Customer",
