--- a/lib/i18n/translations/es.json
+++ b/lib/i18n/translations/es.json
@@ -42,6 +42,22 @@
     "role": "Rol",
     "canCreateGroups": "Puede Crear Grupos",
     "noName": "Sin nombre",
+    "export": "Exportar",
+    "import": "Importar",
+    "exportJSON": "Exportar JSON",
+    "exportCSV": "Exportar CSV",
+    "importTitle": "Importar Usuarios",
+    "importDescription": "Importa usuarios desde un archivo JSON o CSV. El archivo debe coincidir con el formato de exportación.",
+    "importMode": "Modo de Importación",
+    "importModeSkip": "Omitir Existentes (Recomendado)",
+    "importModeUpdate": "Actualizar Existentes",
+    "importModeHelp": "Omitir: No importar si el usuario ya existe. Actualizar: Actualizar usuarios existentes.",
+    "importSuccess": "Importación Exitosa",
+    "importFailed": "Importación Fallida",
+    "updated": "Actualizados",
+    "skipped": "Omitidos",
+    "errors": "Errores",
+    "unknownError": "Error desconocido ocurrió",
     "roleOptions": {
       "all": "Todos",
       "customer": "Customer",
