feat: Add max_members_per_group and discount_tier_identifier to users
- Add database migration script for new user fields
- Update User interface and database functions
- Add UI fields in users management page (only visible when can_create_groups is true)
- Update createGroup to use user's max_members_per_group and discount_tier_identifier
- Update export/import to include new fields
- Add translations for new fields

--- a/lib/i18n/translations/en.json
+++ b/lib/i18n/translations/en.json
@@ -58,6 +58,11 @@
     "skipped": "Skipped",
     "errors": "Errors",
     "unknownError": "Unknown error occurred",
+    "groupSettings": "Group Settings",
+    "maxMembersPerGroup": "Max Members Per Group",
+    "maxMembersPerGroupHelp": "If set, this user can create groups with up to this many members. If empty, the default value from configuration will be used.",
+    "discountTierIdentifier": "Discount Tier Identifier",
+    "discountTierIdentifierHelp": "Discount tier identifier for groups created by this user (e.g., '1', '2', 'basic', 'premium'). Used to determine discount percentage.",
     "roleOptions": {
       "all": "All",
       "customer": "Customer",
